Standardized password for all the databases and updated pg to 16. Also added insert scripts on startup.

--- a/1-setup/docker-setup/mysql/docker-compose.yml
+++ b/1-setup/docker-setup/mysql/docker-compose.yml
@@ -6,8 +6,9 @@ services:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: University
       MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_PASSWORD: Password!2024
     ports:
       - "3306:3306"
     volumes:
       - ../../schema/university-mysql.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../../schema/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql
