--- a/1-setup/docker-setup/postgresql/docker-compose.yml
+++ b/1-setup/docker-setup/postgresql/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3.8'
 services:
   postgres:
-    image: postgres:14
+    image: postgres:16
     environment:
       POSTGRES_DB: University
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: Password!2024
     ports:
       - "5432:5432"
     volumes:
       - ../../schema/university-postgresql.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../../schema/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql
