--- a/1-setup/docker-setup/sqlserver/docker-compose.yml
+++ b/1-setup/docker-setup/sqlserver/docker-compose.yml
@@ -10,11 +10,14 @@ services:
       - "1433:1433"
     volumes:
       - ../../schema/university-sqlserver.sql:/university-sqlserver.sql
+      - ../../schema/populate-university-db.sql:/insert-scripts.sql
     command: >
       /bin/bash -c "
       /opt/mssql/bin/sqlservr & 
       sleep 30 && 
-      /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'Password!2024' -i /university-sqlserver.sql &&
+      /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P $${SA_PASSWORD} -i /university-sqlserver.sql &&
+      sleep 10 && 
+      /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P $${SA_PASSWORD} -d University -i /insert-scripts.sql &&
       while true; do sleep 3600; done
       "
     
