docker compose env variable

--- a/1-setup/docker-setup/postgresql/docker-compose.yml
+++ b/1-setup/docker-setup/postgresql/docker-compose.yml
@@ -9,18 +9,5 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ../../schema/full/university-postgresql.sql:/docker-entrypoint-initdb.d/init.sql
-      - ../../schema/full/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql
-profiles:
-  simple:
-    services:
-      postgres:
-        volumes:
-          - ../../schema/simple/university-postgresql.sql:/docker-entrypoint-initdb.d/init.sql
-          - ../../schema/simple/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql     
-  full:
-    services:
-      postgres:
-        volumes:
-          - ../../schema/full/university-postgresql.sql:/docker-entrypoint-initdb.d/init.sql
-          - ../../schema/full/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql   
+      - ../../schema/${PROFILE:-simple}/university-postgresql.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../../schema/${PROFILE:-simple}/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql
