--- a/1-setup/docker-setup/mysql/docker-compose.yml
+++ b/1-setup/docker-setup/mysql/docker-compose.yml
@@ -10,18 +10,5 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ../../schema/simple/university-mysql.sql:/docker-entrypoint-initdb.d/init.sql
-      - ../../schema/simple/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql
-profiles:
-  simple:
-    services:
-      mysql:
-        volumes:
-          - ../../schema/simple/university-mysql.sql:/docker-entrypoint-initdb.d/init.sql
-          - ../../schema/simple/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql     
-  full:
-    services:
-      mysql:
-        volumes:
-          - ../../schema/full/university-mysql.sql:/docker-entrypoint-initdb.d/init.sql
-          - ../../schema/full/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql          
+      - ../../schema/${PROFILE:-simple}/university-mysql.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../../schema/${PROFILE:-simple}/populate-university-db.sql:/docker-entrypoint-initdb.d/insert-scripts.sql
