Minor changes made

--- a/sql-queries-10/checking-database-connectivity/mysql.env
+++ b/sql-queries-10/checking-database-connectivity/mysql.env
@@ -1,5 +1,5 @@
-MYSQL_HOST="localhost" 
-MYSQL_PORT="3306" 
-MYSQL_USER="root" 
-MYSQL_PASS="MySQL!2024" 
-MYSQL_DB="University"
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root 
+MYSQL_PASS=MySQL2024
+MYSQL_DB=University
