--- a/sql-queries-10/checking-database-connectivity/postgresql.env
+++ b/sql-queries-10/checking-database-connectivity/postgresql.env
@@ -1,5 +1,5 @@
-DB_HOST="localhost" 
-DB_PORT="5432" 
-DB_USER="user" 
-DB_PASS="Password!2024" 
-DB_NAME="University"
+DB_HOST=localhost
+DB_PORT=5432 
+DB_USER=user
+DB_PASS=Password2024
+DB_NAME=University
